# Din-Don-RAG

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: BEST_PRACTICES.md  DOCUMENTAZIONE_PROGETTO.md  piano_aggiunta_gemini.txt
notebooks/: nlp_pipeline.ipynb
scripts/: download_llms.sh  download_nltk_data.py  generate_dataset.py  init_project.py  ollama_entrypoint.sh  predict.py  seed_db.py  train_pipeline.py
src/: config.py  data_loader.py  feature_extraction.py  logger.py  model_trainer.py  scraper.py  text_preprocessing.py  utils.py
src/application/: package.json  server.ts  tsconfig.json
src/application/controllers/: apiController.ts  pageController.ts
src/application/public/css/: style.css
src/application/views/: about.ejs  chat.ejs  home.ejs  legacy_chat.ejs
src/application/views/partials/: footer.ejs  header.ejs
src/crawler/: Dockerfile  main.py
src/database/: init.sql
src/inference/: Dockerfile  main.py  rag_sql.py  requirements.txt
tests/: test_text_preprocessing.py
utils/: data_loader.py  feature_extraction.py  logger.py  model_trainer.py  scraper.py  text_preprocessing.py  utils.py
